// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infoTable > should not add empty h2 with header set to true 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__14lm1670 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      data-disabled="false"
    >
      <div
        class="styles__14lm1671"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
            style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
            style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_small__1s4jots3 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_small__1s4jots3 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_captionStrong__1do42lst style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly with a header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__14lm1670 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      data-disabled="false"
    >
      <h2
        class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_heading__1do42ls11 style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
      >
        Header
      </h2>
      <div
        class="styles__14lm1671"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
            style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
            style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should render correctly with complex header 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_large__1s4jotsa styles__14lm1670 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.5rem_xxsmall__xf61n43p"
      data-disabled="false"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
        style="--_1d8tbmb0: 100%;"
      >
        <h2
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_variant_heading__1do42ls11 style_undefined_compound_0__1do42ls1a"
        >
          header
        </h2>
        <button
          class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_medium__8xt08sf styles_variant_filled__8xt08si styles_undefined_compound_6__8xt08sr"
          type="button"
        >
          Click
        </button>
      </div>
      <div
        class="styles__14lm1671"
        data-disabled="false"
        data-is-active="false"
      >
        <dl
          class="styles__1s4jots1"
        >
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
            style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
          </div>
          <div
            class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
            style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 100%;"
          >
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell with more text
              </dd>
            </div>
            <div
              class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
              style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
            >
              <dt
                class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
              >
                title
              </dt>
              <dd
                class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
              >
                cell
              </dd>
            </div>
          </div>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with CellWithCopybutton 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 1fr; --_85qyp71: 1fr; --_85qyp72: 1fr; --_85qyp73: 1fr; --_85qyp74: 1fr; --_85qyp75: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 styles__1s4jots7 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            <div
              class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
              style="--_85qyp70: 1fr auto; --_85qyp71: 1fr auto; --_85qyp72: 1fr auto; --_85qyp73: 1fr auto; --_85qyp74: 1fr auto; --_85qyp75: 1fr auto;"
            >
              <p
                class="style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style__1do42ls3e"
              >
                a content
              </p>
              <div
                class="styles__18qbklt5"
              >
                <button
                  aria-labelledby="_r_4f_"
                  class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_neutral__8xt08s8 styles_size_small__8xt08sg styles_variant_ghost__8xt08sj styles_undefined_compound_24__8xt08s19"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M6.026 5.007A.1.1 0 0 0 6 5.084v8.333a.1.1 0 0 0 .026.076l.008.007h6.765l.008-.007a.1.1 0 0 0 .026-.076V5.084a.1.1 0 0 0-.026-.077L12.799 5H6.034zM4.5 5.084c0-.828.64-1.584 1.531-1.584h6.77c.891 0 1.532.756 1.532 1.584v8.333c0 .828-.64 1.583-1.531 1.583H6.03c-.89 0-1.531-.755-1.531-1.583z"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.526 2.507a.1.1 0 0 0-.026.076v8.333a.75.75 0 0 1-1.5 0V2.583C2 1.755 2.64 1 3.531 1h6.77c.891 0 1.532.755 1.532 1.583a.75.75 0 0 1-1.5 0 .1.1 0 0 0-.026-.076L10.3 2.5H3.534z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 1fr; --_85qyp71: 1fr; --_85qyp72: 1fr; --_85qyp73: 1fr; --_85qyp74: 1fr; --_85qyp75: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with multiLine 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 1fr; --_85qyp71: 1fr; --_85qyp72: 1fr; --_85qyp73: 1fr; --_85qyp74: 1fr; --_85qyp75: 1fr; --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 100%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`infoTable > should work with width 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <dl
      class="styles__1s4jots1"
    >
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 30%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 2fr 1fr; --_85qyp71: 2fr 1fr; --_85qyp72: 2fr 1fr; --_85qyp73: 2fr 1fr; --_85qyp74: 2fr 1fr; --_85qyp75: 2fr 1fr; --_1s4jots0: 30%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell with more text
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: 1fr; --_85qyp71: 1fr; --_85qyp72: 1fr; --_85qyp73: 1fr; --_85qyp74: 1fr; --_85qyp75: 1fr; --_1s4jots0: 30%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
      <div
        class="styles__1s4jots2 styles_size_large__1s4jots4 styles__1w3vbem0 styles_gap_1rem_xxsmall__1w3vbem2p"
        style="--_85qyp70: repeat(3, 1fr); --_85qyp71: repeat(3, 1fr); --_85qyp72: repeat(3, 1fr); --_85qyp73: repeat(3, 1fr); --_85qyp74: repeat(3, 1fr); --_85qyp75: repeat(3, 1fr); --_1s4jots0: 30%;"
      >
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          style="--_1d8tbmb0: 100%; --_1d8tbmb2: 0;"
        >
          <dt
            class="styles__1s4jots5 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmallStrong__1do42lsl style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            title
          </dt>
          <dd
            class="styles__1s4jots6 style__1do42ls0 style_oneLine_true__1do42ls3 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32 style__1do42ls3e"
          >
            cell
          </dd>
        </div>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
